# musicdb_parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: list_playlists.py  list_tracks.py
navidrome/: update_annotations.py
src/: utils.py
src/itl/: library.py  parsing.py  parsing_types.py
src/musicdb/: library.py  parsing.py  parsing_types.py
